# gpt5-todo

./: .env.example  Cargo.toml  README.md  todos.db
docs/: README.md
src/: lib.rs  main.rs
src/application/: todo_service.rs  todo_service_tests.rs
src/domain/: mod.rs  repository.rs  todo.rs
src/http/: types.rs
src/http/routes/: todos.rs
src/http/routing/: mod.rs
src/infrastructure/: sqlite_repo.rs
tests/: acceptance_todos.rs
